NOCC 0.9.5	??   ??, 2001

	* Strip slashes from user while logging in (#465418)
	* Bypassed redundant 'check_form' javascript method.
	* Added 'outlook-style quoting' preference (#459461)
	* Added config option to present delete icon as a button.
	* Added 'hide addresses' preference (#471806).
	* Moved inclusion of 'menu_inbox' so when the wrong password is
	  supplied, it doesn't present options for 'Inbox', 'Preferences' etc
	* Removed restriction on the size of left/right arrow images.
	* Added start/end identifier comments to html templates.
	* Fixed several potential 'uninitialised variable' warnings
	* Fixed order of session headers
	* Added error logging of file opening problems in prefs.php.
	* Updated prefs.php to use domain in prefs filename (fixes #472923)
	* Added logic patch for displaying images (from Colin Stephenson #427202).
	* Added 'Loading image ...' message.
	* Header displays email address from preferences, if available.
	* Added 'CC self' preference to receive a copy of outgoing emails.
	* Added './' in the path of all require, include and open calls,
	  As we now use PEAR in php.ini include_path directive.
	* Replace require() and include() with require_once() and include_once()
	  when it was needed.
	* Added logging of SMTP transactions, until all bugs fixed.
	* Added send_error output page, to report SMTP problems to user.
	* Used PEAR::Error for passing SMTP exceptions back to caller.
	* Disabled encode_mime in cut_addresses until it can be checked.
	* Strip comments from e-mail addresses before using on RCPT in
	  SMTP transactions (fixes bug #430367).
	* Added rudimentary user preferences (name, email and signature).
	* Made textarea in send.php narrower, to accomodate 800x600 users.
	* Removed nowrap table attributes, as they cause problems for
	  800x600 users.
	* New paperclip icon to indicate attachments.
	* If user is logged in using HTTP auth, default username on
	  login page.