@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/class_smtp.php,v 1.22 2001/10/19 10:34:24 nicocha Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/class_smtp.php,v 1.23 2001/10/21 16:03:06 rossigee Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -11,7 +11,7 @@
  * Class based on a work from Unk <rgroesb_garbage@triple-it_garbage.nl>  
  */
 
-require_once ('PEAR.php');
+require_once ('exception.php');
 
 class smtp
 {
@@ -23,6 +23,7 @@ class smtp
 	var $bcc;
 	var $subject;
 	var $data;
+	var $sessionlog = '';
 		
 	// This function is the constructor don't forget this one
 	function smtp()
@@ -41,15 +42,15 @@ class smtp
 	{ 
 		global $SMTP_GLOBAL_STATUS; 
 
-		$smtp = fsockopen($this->smtp_server, $this->port); 
-		if ($smtp < 0)
-			return new PEAR_Error($html_smtp_no_conn); 
+		$smtp = fsockopen($this->smtp_server, $this->port, $errno, $errstr); 
+		if (!$smtp)
+			return new Exception($html_smtp_no_con.": ".$errstr); 
 		$line = fgets($smtp, 1024);
 		$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
 		$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
 		if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] !=  '2')
-			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
+			return new Exception($html_smtp_error_unexpected." ".$line); 
 		
 		return $smtp; 
 	} 
@@ -60,15 +61,15 @@ class smtp
 
 		/* 'localhost' always works [Unk] */ 
 		fputs($smtp, "helo localhost\r\n"); 
-		error_log("Sent: helo localhost");
+		$this->sessionlog .= "Sent: helo localhost";
 		$line = fgets($smtp, 1024); 
-		error_log("Rcvd: $line");
+		$this->sessionlog .= "Rcvd: $line";
 
 		$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
 		$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
 		if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] !=  '2')
-			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
+			return new Exception($html_smtp_error_unexpected." ".$line); 
 		
 		return (true);
 	} 
@@ -81,14 +82,14 @@ class smtp
 		  extra func's   [Unk] 
 		*/ 
 		fputs($smtp, "ehlo localhost\r\n"); 
-		error_log("Sent: ehlo localhost");
+		$this->sessionlog .= "Sent: ehlo localhost";
 		$line = fgets($smtp, 1024);
-		error_log("Rcvd: $line");
+		$this->sessionlog .= "Rcvd: $line";
 		$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
 		$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
 		if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '2')
-			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
+			return new Exception($html_smtp_error_unexpected." ".$line); 
 
 		return (true); 
 	} 
@@ -98,15 +99,15 @@ class smtp
 	{ 
 		global $SMTP_GLOBAL_STATUS; 
 		fputs($smtp, "MAIL FROM:$this->from\r\n"); 
-		error_log("Sent: MAIL FROM:$this->from");
+		$this->sessionlog .= "Sent: MAIL FROM:$this->from";
 		$line = fgets($smtp, 1024);
-		error_log("Rcvd: $line");
+		$this->sessionlog .= "Rcvd: $line";
 
 		$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
 		$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
 		if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '2')
-			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
+			return new Exception($html_smtp_error_unexpected." ".$line); 
 		
 		return (true); 
 	} 
@@ -121,42 +122,42 @@ class smtp
 			if($tmp == '' || $tmp == '<>')
 				continue;
 			fputs($smtp, "RCPT TO:$tmp\r\n");
-			error_log("Sent: RCPT TO:$tmp");
+			$this->sessionlog .= "Sent: RCPT TO:$tmp";
 			$line = fgets($smtp, 1024);
-			error_log("Rcvd: $line");
+			$this->sessionlog .= "Rcvd: $line";
 
 			$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
 			$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 			if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '2')
-				return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
+				return new Exception($html_smtp_error_unexpected." ".$line); 
 		}
 		while ($tmp = array_shift($this->cc))
 		{
 			if($tmp == '' || $tmp == '<>')
 				continue;
 			fputs($smtp, "RCPT TO:$tmp\r\n");
-			error_log("Sent: RCPT TO:$tmp");
+			$this->sessionlog .= "Sent: RCPT TO:$tmp";
 			$line = fgets($smtp, 1024);
-			error_log("Rcvd: $line");
+			$this->sessionlog .= "Rcvd: $line";
 			$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
 			$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
 			if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '2')
-				return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
+				return new Exception($html_smtp_error_unexpected." ".$line); 
 		}
 		while ($tmp = array_shift($this->bcc))
 		{
 			if($tmp == '' || $tmp == '<>')
 				continue;
 			fputs($smtp, "RCPT TO:$tmp\r\n"); 
-			error_log("Sent: RCPT TO:$tmp");
+			$this->sessionlog .= "Sent: RCPT TO:$tmp";
 			$line = fgets($smtp, 1024);
-			error_log("Rcvd: $line");
+			$this->sessionlog .= "Rcvd: $line";
 			$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
 			$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
 			if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '2')
-				return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
+				return new Exception($html_smtp_error_unexpected." ".$line); 
 		}
 		return (true); 
 	} 
@@ -166,22 +167,22 @@ class smtp
 		global $SMTP_GLOBAL_STATUS; 
 
 		fputs($smtp, "DATA\r\n"); 
-		error_log("Sent: DATA");
+		$this->sessionlog .= "Sent: DATA";
 		$line = fgets($smtp, 1024);
-		error_log("Rcvd: $line");
+		$this->sessionlog .= "Rcvd: $line";
 
 		$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
 		$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
 		if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '3')
-			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
+			return new Exception($html_smtp_error_unexpected." ".$line); 
 		
 		fputs($smtp, "$this->data"); 
 		fputs($smtp, "\r\n.\r\n"); 
 		$line = fgets($smtp, 1024); 
-		error_log("Rcvd: $line");
+		$this->sessionlog .= "Rcvd: $line";
 		if (substr($line, 0, 1) !=  '2')
-			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
+			return new Exception($html_smtp_error_unexpected." ".$line); 
 
 		return (true); 
 	} 
@@ -191,15 +192,15 @@ class smtp
 		global $SMTP_GLOBAL_STATUS; 
 
 		fputs($smtp,  "QUIT\r\n"); 
-		error_log("Sent: QUIT");
+		$this->sessionlog .= "Sent: QUIT";
 		$line = fgets($smtp, 1024);
-		error_log("Rcvd: $line");
+		$this->sessionlog .= "Rcvd: $line";
 
 		$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
 		$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
 		if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] !=  '2')
-			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
+			return new Exception($html_smtp_error_unexpected." ".$line); 
 
 		return (true); 
 	} 
@@ -207,22 +208,22 @@ class smtp
 	function send()
 	{
 		$smtp = $this->smtp_open();
-		if(PEAR::isError($smtp))
+		if(Exception::isException($smtp))
 			return $smtp;
 		$ev = $this->smtp_helo($smtp);
-		if(PEAR::isError($ev))
+		if(Exception::isException($ev))
 			return $ev;
 		$ev = $this->smtp_mail_from($smtp);
-		if(PEAR::isError($ev))
+		if(Exception::isException($ev))
 			return $ev;
 		$ev = $this->smtp_rcpt_to($smtp);
-		if(PEAR::isError($ev))
+		if(Exception::isException($ev))
 			return $ev;
 		$ev = $this->smtp_data($smtp);
-		if(PEAR::isError($ev))
+		if(Exception::isException($ev))
 			return $ev;
 		$ev = $this->smtp_quit($smtp);
-		if(PEAR::isError($ev))
+		if(Exception::isException($ev))
 			return $ev;
 		return (true);
 	}
